--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -6,12 +6,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh; /* Altura de toda la ventana */
-    background-image: url('../../Images/fondoPlantio.jpg'); /* URL de la imagen */
+    height: 100vh; /* Altura de toda la ventana */
+    background-image: url('../../Images/FondoApp.jpeg'); /* URL de la imagen */
     background-size: cover; /* Ajusta la imagen para cubrir el área */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     overflow: hidden;
-    /*background: linear-gradient(to bottom right, #ff6200, #ffdfa0, #f9f9f9);
+    /*background: linear-gradient(to bottom right, #a1360b, #ffdfa0, #f9f9f9);
     /*margin: 0; /* Eliminar márgenes del body */
   }
   
@@ -19,7 +19,7 @@
     content: "";
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.4); /* Negro con 40% de opacidad: ajusta aquí */
+    background: rgba(0,0,0,0); /* Negro con 40% de opacidad: ajusta aquí */
     z-index: 1;
     pointer-events: none; /* Permite clics en los elementos hijos */
 }
@@ -38,7 +38,7 @@
     border-radius: 8%;
     background: linear-gradient(to bottom right, #f9f9f9, #fff8eb);
     color: #893005;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra opcional */
+    background: rgba(255, 248, 236, 0.8); /* Negro con 40% de opacidad: ajusta aquí */
   }
   
   .form-group {
@@ -59,7 +59,7 @@
   }
   
   input {
-    border: 2px solid orange; /* Borde de 2px con color naranja */
+    border: 2px solid #a1360b; /* Borde de 2px con color naranja */
     border-radius: 10px; /* Opcional: bordes redondeados */
     padding: 8px; /* Espaciado interno opcional */
   }
@@ -71,7 +71,7 @@
     padding: 7px; /* Ajusta el relleno según sea necesario */
     text-align: center;
     box-sizing: border-box; /* Incluye el relleno y el borde en la anchura total */
-    background: #ff6200;
+    background: #a1360b;
     color: white; /* Color del texto */
     border: none; /* Sin borde */
     border-radius: 15px; /* Borde redondeado */
@@ -102,7 +102,7 @@
     display: inline-block;
     width: 16px;
     height: 16px;
-    border: 2px solid #ff6200; /* Cambia el color del borde aquí */
+    border: 2px solid #a1360b; /* Cambia el color del borde aquí */
     background-color: #fff;
     border-radius: 0; /* Asegura que sea un cuadrado */
     margin-right: 8px;
@@ -111,7 +111,7 @@
     }
 
     .radio-list li input:checked + label::before {
-        border-color: #ff6200; /* Borde más oscuro */
+        border-color: #a1360b; /* Borde más oscuro */
         background-color: #a1360b;
     }
 
